syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/YuanData/allegro-trade/pb";

message Member {
    string membername = 1;
    string name_entire = 2;
    string email = 3;
    google.protobuf.Timestamp password_changed_time = 4;
    google.protobuf.Timestamp created_time = 5;
}
