syntax = "proto3";

package pb;

import "member.proto";

option go_package = "github.com/YuanData/allegro-trade/pb";

message UpdateMemberRequest {
    string membername = 1;
    optional string name_entire = 2;
    optional string email = 3;
    optional string password = 4;
}

message UpdateMemberResponse {
    Member member = 1;
}
